format: Allow user to specify output directory

--- a/git-series.1
+++ b/git-series.1
@@ -135,6 +135,7 @@ the commits.
 [\fB--rfc\fR] \
 [\fB--stdout\fR] \
 [\fB--subject-prefix=\fR\fISubject-Prefix\fR]
+[\fB-o\fR \fIDirectory\fR | \fB--output-directory=\fR\fIDirectory\fR] \
 Prepare the patch series to send via email.
 This creates one file per patch in the series, plus one additional file for the
 cover letter if any.
